[metadata]
name = pyramid_metrics
version = 0.0.1.dev0
requires-dist =
	statsd >= 2.1.2, < 2.2

[files]
packages =
	pyramid_metrics
	pyramid_metrics.tests
	pyramid_metrics.tests.unittests
	pyramid_metrics.tests.functional

[nosetests]
match = ^test
nocapture = 1
cover-package = pyramid_metrics
cover-inclusive = 0
with-xcoverage = 1
with-xunit = 1
cover-erase = 1
verbosity = 3
with-id = 1
with-yanc = 1

