[metadata]
name = pyramid_metrics
version = 0.1.1
author = Pior Bastida
author-email = pbastida@ludia.com
summary = Performance metrics for Pyramid using StatsD
description-file = README.rst
home-page = https://bitbucket.org/Ludia/pyramid-metrics
license = BSD-derived (http://www.repoze.org/LICENSE.txt)
keywords = wsgi pylons pyramid statsd metric tween handler
classifier = 
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7
	Framework :: Pyramid
	Topic :: Internet :: WWW/HTTP :: WSGI
requires-dist = 
	statsd >= 2.1.2, < 2.2

[files]
packages = 
	pyramid_metrics
	pyramid_metrics.tests
	pyramid_metrics.tests.unittests
	pyramid_metrics.tests.functional

[noah]
public = True

[nosetests]
match = ^test
nocapture = 1
cover-package = pyramid_metrics
cover-inclusive = 0
with-xcoverage = 1
with-xunit = 1
cover-erase = 1
verbosity = 3
with-id = 1
with-yanc = 1

